feat(content): 콘텐츠 구독형 상태갑 수정 반영